--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="vertical"
     tools:context=".fragments.ImageFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -13,66 +12,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/image_section_header"/>
+        app:title="@string/image_section_header" />
 
-    <ScrollView
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/currentImage"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="@dimen/side_margin"
+        android:layout_marginTop="@dimen/standart"
+        android:layout_marginEnd="@dimen/side_margin"
+        android:layout_marginBottom="@dimen/standart"
+        android:contentDescription="@string/image_desc"
+        android:src="@mipmap/ic_launcher"
+        app:layout_constraintBottom_toTopOf="@id/changePictureButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageSectionHeader" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/changePictureButton"
+        style="@style/Theme.PhotoEditor.Button.Accent"
+        android:layout_marginBottom="@dimen/standart"
+        android:text="@string/change_picture_button"
+        app:icon="@drawable/ic_image"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageSectionHeader">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/standart"
-            android:paddingBottom="@dimen/standart">
-
-            <ImageView
-                android:id="@+id/currentImage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/side_margin"
-                android:layout_marginEnd="@dimen/side_margin"
-                android:src="@mipmap/ic_launcher"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:contentDescription="@string/image_desc" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/changePictureButton"
-                style="@style/Theme.PhotoEditor.Button.Accent"
-                android:layout_marginTop="@dimen/standart"
-                android:text="@string/change_picture_button"
-                app:icon="@drawable/ic_image"
-                app:layout_constraintEnd_toEndOf="@+id/currentImage"
-                app:layout_constraintStart_toStartOf="@id/currentImage"
-                app:layout_constraintTop_toBottomOf="@+id/currentImage" />
-
-            <!--<com.google.android.material.button.MaterialButton
-                android:id="@+id/takePictureButton"
-                style="@style/Theme.PhotoEditor.Button.Accent"
-                android:layout_marginTop="@dimen/standart"
-                android:layout_marginEnd="@dimen/half"
-                android:text="@string/take_picture_button"
-                app:icon="@drawable/ic_photo"
-                app:layout_constraintEnd_toStartOf="@+id/choosePictureButton"
-                app:layout_constraintStart_toStartOf="@+id/currentImage"
-                app:layout_constraintTop_toBottomOf="@+id/currentImage" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/choosePictureButton"
-                style="@style/Theme.PhotoEditor.Button.Accent"
-                android:layout_marginStart="@dimen/half"
-                android:layout_marginTop="@dimen/standart"
-                android:text="@string/choose_picture_button"
-                app:icon="@drawable/ic_folder"
-                app:layout_constraintEnd_toEndOf="@+id/currentImage"
-                app:layout_constraintStart_toEndOf="@id/takePictureButton"
-                app:layout_constraintTop_toBottomOf="@+id/currentImage" />-->
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
+        app:layout_constraintEnd_toEndOf="@+id/currentImage"
+        app:layout_constraintStart_toStartOf="@id/currentImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
