--- a/app/src/main/res/layout/activity_color_correction.xml
+++ b/app/src/main/res/layout/activity_color_correction.xml
@@ -71,9 +71,8 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/undoButton"
-        style="@style/Theme.PhotoEditor.Button"
+        style="@style/Theme.PhotoEditor.Button.Undo"
         android:layout_marginBottom="@dimen/standart"
-        android:text="@string/undo_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/negativeFilter"
         app:layout_constraintStart_toStartOf="@+id/sepiaFilter" />
