--- a/app/src/main/res/layout/activity_segmentation.xml
+++ b/app/src/main/res/layout/activity_segmentation.xml
@@ -20,6 +20,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/side_margin"
         android:layout_marginEnd="@dimen/side_margin"
+        android:layout_marginTop="@dimen/standart"
         android:layout_marginBottom="@dimen/standart"
         android:contentDescription="@string/current_image_desc"
         android:src="@mipmap/ic_launcher"
