--- a/app/src/main/res/layout/fragment_save.xml
+++ b/app/src/main/res/layout/fragment_save.xml
@@ -15,41 +15,35 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/save_section_header" />
 
-    <ScrollView
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/resultImage"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/saveSectionHeader"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_marginStart="@dimen/side_margin"
+        android:layout_marginTop="@dimen/standart"
+        android:layout_marginEnd="@dimen/side_margin"
+        android:layout_marginBottom="@dimen/standart"
+        android:contentDescription="@string/image_desc"
+        android:src="@mipmap/ic_launcher"
+        app:layout_constraintBottom_toTopOf="@id/save_image_textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/saveSectionHeader" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/standart">
-
-            <ImageView
-                android:id="@+id/resultImage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/side_margin"
-                android:layout_marginEnd="@dimen/side_margin"
-                android:src="@mipmap/ic_launcher"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:contentDescription="@string/save_image_desc" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/choosePictureButton"
-                style="@style/Theme.PhotoEditor.Button.Accent"
-                android:layout_marginTop="@dimen/standart"
-                android:text="@string/save_picture_button"
-                app:icon="@drawable/ic_download"
-                app:layout_constraintStart_toStartOf="@id/resultImage"
-                app:layout_constraintEnd_toEndOf="@+id/resultImage"
-                app:layout_constraintTop_toBottomOf="@+id/resultImage" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/save_image_textView"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/four"
+        app:layout_constraintStart_toStartOf="@id/resultImage"
+        app:layout_constraintEnd_toEndOf="@id/resultImage"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="@dimen/standart"
+        android:text="@string/save_image_text"
+        android:gravity="center"
+        android:textSize="@dimen/save_image_text_size"
+        android:fontFamily="sans-serif-medium"
+        android:paddingHorizontal="@dimen/standart"
+        android:background="@color/effectCardBackground"
+        android:textColor="@color/accent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
