--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,6 @@
     <dimen name="task_title_size">16sp</dimen>
     <dimen name="task_desc_size">14sp</dimen>
     <dimen name="icon_size">24dp</dimen>
+
+    <dimen name="save_image_text_size">14sp</dimen>
 </resources>
